--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@types/jsonwebtoken": "^9.0.6",
     "prettier": "^3.2.5",
     "turbo": "latest"
   },
@@ -23,6 +24,7 @@
   ],
   "dependencies": {
     "axios": "^1.7.5",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   }
 }
